--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,10 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 multidict==6.0.4
+mysql-connector-python==8.1.0
 openai==0.28.1
+pika==1.3.2
+protobuf==4.21.12
 requests==2.31.0
 tqdm==4.66.1
 urllib3==2.0.6
